[package]
name = "decimal-arbitrary-precision-json"
version = "0.1.0"
authors = ["Markus Ast <m@rkusa.st>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust_decimal = "1.8"
serde_json = { version = "1.0", features = ["arbitrary_precision"] }
